@@ -1,3 +1,12 @@
+2007-08-18  Gabriel Mansi  <gabriel-dot-mansi-at-gmail-dot-com>
+
+	* unichrome/via_driver.c: (VIASetupDefaultOptions):
+	* unichrome/via_priv.h:
+	* unichrome/via_swov.c: (Upd_Video):
+
+	Xvideo code clean up, added maximum resolution with
+	interpolation for all chipsets.
+
 2007-08-03  Xavier Bachelot <xavier-at-bachelot-dot-org>
 
 	* unichrome/via_bios.h:
